@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>IBDocumentLocation</key>
-	<string>11 131 356 240 0 0 1280 1002 </string>
+	<string>853 177 356 240 0 0 1280 1002 </string>
 	<key>IBFramework Version</key>
 	<string>291.0</string>
 	<key>IBLockedObjects</key>
